# autoapply

./: .gitignore  AGENTS.md  INTEGRATION_SUMMARY.md  PLATFORM_INTEGRATION.md  PYDANTIC_MODELS.md  README.md  pyproject.toml  requirements.txt
config/: config.json  config.toml  config.yaml
examples/: integration_example.py  pydantic_jobs_example.py
src/: main.py
src/autoapply/: main.py  models.py
src/autoapply/utils/: config_loader.py  csv_export.py  description_parser.py  job_converter.py
tests/: conftest.py  test_config.py  test_csv_export.py  test_description_parser.py  test_glassdoor.py  test_indeed.py  test_linkedin.py  test_models.py
